:update: inventory and playbook

--- a/site.yml
+++ b/site.yml
@@ -2,16 +2,18 @@
 
 - name: Deploy Dolibarr database
   hosts: dolidb
-  remote_user: root
   roles:
     - role: mysql
       become: yes
 
 - name: Deploy Dolibarr instance
   hosts: dolinstance
-  remote_user: root
   roles:
-    - debian_repos
-    - apache2
-    - php
-    - dolibarr
+    - role: debian_repos
+      become: yes
+    - role: apache2
+      become: yes
+    - role: php
+      become: yes
+    - role: dolibarr
+      become: yes
